--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import url("https://fonts.googleapis.com/icon?family=Material+Icons");
+@import "~@angular/material/core/theming/prebuilt/pink-bluegrey.css";
+@import "~firebaseui/dist/firebaseui.css";
+@import "./styles/dimension.css";
+@import "./styles/flex.css";
